# dbt-mono

./: .env.example  .gitignore  .user.yml  ARCHITECTURE.md  forge.yml  test_parity.py  test_workflow_sdk.py
dbt-dab-tools/: dbt_project.yml
dbt-dab-wrapper-v0.1/: .env.example  .gitignore  .instructions.md  ARCHITECTURE.md  DEVELOPER-ENABLEMENT-QUESTION.yml  GUIDE.md  IMPLEMENT-PROVENANCE-EXPLAIN.yml  NEXT-IMMEDIATE.yml  QUICKSTART.md  README.md  ROADMAP_REVIEW.md  _test_bifurcation.py  _test_domain_layers.py  _test_opt_out.py  databricks.yml  dbt_project.yml  forge.yml  package-lock.yml  packages.yml  pyproject.toml  wrapper.yml
dbt-dab-wrapper-v0.1/artifacts/: graph.json
dbt-dab-wrapper-v0.1/artifacts/tmp_teardown_mode/teardown/: teardown.sql
dbt-dab-wrapper-v0.1/dbt/: models.yml
dbt-dab-wrapper-v0.1/dbt-tools/macros/: lineage.sql
dbt-dab-wrapper-v0.1/dbt/ddl/: 00_seeds.yml  00_udfs.yml  01_staging.yml  02_clean.yml  03_enrich.yml  04_serve.yml
dbt-dab-wrapper-v0.1/dbt/ddl/bronze/models/: file_manifest.yml  raw_customers.yml  raw_orders.yml
dbt-dab-wrapper-v0.1/dbt/ddl/bronze/seeds/: raw_customers.yml  raw_orders.yml
dbt-dab-wrapper-v0.1/dbt/ddl/bronze/staging/: stg_orders.yml
dbt-dab-wrapper-v0.1/dbt/ddl/meta/seeds/: ingestion_config.yml
dbt-dab-wrapper-v0.1/dbt/ddl/silver/: customer_orders.yml  customer_summary.yml
dbt-dab-wrapper-v0.1/dbt/ddl/silver/udfs/: loyalty_tier.yml
dbt-dab-wrapper-v0.1/dbt/functions/: average_score.sql  clean_email.sql  loyalty_tier.sql
dbt-dab-wrapper-v0.1/dbt/migrations/: 001_add_loyalty_tier.yml
dbt-dab-wrapper-v0.1/dbt/models/: customer_clean.sql  customer_orders.sql  customer_summary.sql  schema.yml  stg_customers.sql  stg_orders.sql
dbt-dab-wrapper-v0.1/dbt/models/_volumes/: landing.sql
dbt-dab-wrapper-v0.1/dbt/models/demo/bronze/: stg_customers.sql  stg_orders.sql
dbt-dab-wrapper-v0.1/dbt/models/demo/gold/: customer_summary.sql
dbt-dab-wrapper-v0.1/dbt/project/python/: ingest_from_volume.py
dbt-dab-wrapper-v0.1/dbt/seeds/: ingestion_config.csv  raw_customers.csv  raw_orders.csv
dbt-dab-wrapper-v0.1/dbt/sources/: _sources.yml
dbt-dab-wrapper-v0.1/dbt/volumes/: landing.sql
dbt-dab-wrapper-v0.1/docs/: DATABRICKS_AUTH.md  GUIDE.md  V1_ASSET_PLACEMENT.md  VISUAL_DOCUMENTATION.md  table-lineage.md
dbt-dab-wrapper-v0.1/docs/archive/: ROADMAP_REVIEW.md  customer-summary-lineage.md  pipeline.md  table-lineage.md
dbt-dab-wrapper-v0.1/docs/examples/multi_domain_project/: HOW-TO.md  forge.yml
dbt-dab-wrapper-v0.1/docs/examples/sales_project/: HOW-TO.md  forge.yml
dbt-dab-wrapper-v0.1/docs/planning/: SUMMARY-DOMAIN-INSTANCES-GROUPING.yml  TODO-DATABRICKS-ASSET-BUNDLE-CONFORMITY.yml  TODO-DOMAIN-BASED-MODEL-INSTANCES.yml  TODO-DOMAIN-VOLUMES-AS-SEED.yml  TODO-EDGE-CASES-CONFIG-ONLY.yml
dbt-dab-wrapper-v0.1/examples/sales_project/: forge.yml  wrapper.yml
dbt-dab-wrapper-v0.1/macros/: generate_schema_name.sql  lineage.sql  python_udf.sql  quarantine.sql
dbt-dab-wrapper-v0.1/notebooks/: slack_alert.ipynb
dbt-dab-wrapper-v0.1/python/: ingest_from_volume.py
dbt-dab-wrapper-v0.1/resources/backups/20260323_141455/: BACKUP_manifest.yml  graph.json
dbt-dab-wrapper-v0.1/resources/backups/20260323_141559/: BACKUP_manifest.yml  graph.json
dbt-dab-wrapper-v0.1/resources/backups/20260323_142411/: BACKUP_manifest.yml  graph.json
dbt-dab-wrapper-v0.1/resources/backups/20260323_142431/: BACKUP_manifest.yml  graph.json
dbt-dab-wrapper-v0.1/resources/backups/20260323_142524/: BACKUP_manifest.yml  graph.json
dbt-dab-wrapper-v0.1/resources/backups/20260323_142924/: BACKUP_manifest.yml  graph.json
dbt-dab-wrapper-v0.1/resources/backups/20260323_143046/: BACKUP_manifest.yml  graph.json
dbt-dab-wrapper-v0.1/resources/backups/20260323_143206/: BACKUP_manifest.yml  graph.json
dbt-dab-wrapper-v0.1/resources/backups/20260323_143626/: BACKUP_manifest.yml  graph.json
dbt-dab-wrapper-v0.1/resources/backups/20260323_143728/: BACKUP_manifest.yml  graph.json
dbt-dab-wrapper-v0.1/resources/backups/20260323_144227/: BACKUP_manifest.yml  graph.json
dbt-dab-wrapper-v0.1/resources/backups/20260323_144558/: BACKUP_manifest.yml  graph.json
dbt-dab-wrapper-v0.1/resources/backups/20260323_144733/: BACKUP_manifest.yml  graph.json
dbt-dab-wrapper-v0.1/resources/backups/20260323_225839/: BACKUP_manifest.yml  graph.json
dbt-dab-wrapper-v0.1/resources/backups/20260325_104428/: BACKUP_manifest.yml  graph.json
dbt-dab-wrapper-v0.1/resources/jobs/: PROCESS_demo.yml  PROCESS_demo_apac.yml  PROCESS_demo_eu.yml  PROCESS_demo_us.yml  PROCESS_sales.yml  SETUP_sales.yml  TEARDOWN_sales.yml
dbt-dab-wrapper-v0.1/resources/teardown/: TEARDOWN_demo.yml  TEARDOWN_sales.yml
dbt-dab-wrapper-v0.1/sample_data/: raw_customers_20260324.csv  raw_orders.csv
dbt-dab-wrapper-v0.1/sql/: 000_udfs.sql  001_file_manifest.sql  001_lineage_graph.sql  001_stg_customers.sql  002_customer_clean.sql  002_customer_clean_quarantine.sql  002_file_manifest.sql  002_quarantine_tables.sql  002_raw_customers.sql  002_volumes.sql  003_ingestion_config.sql  003_raw_customers.sql  003_raw_orders.sql  003_stg_orders.sql  004_customer_orders.sql  004_ingestion_config.sql  004_raw_orders.sql  004_stg_customers.sql  005_customer_clean.sql  005_customer_clean_quarantine.sql  005_customer_summary.sql  005_file_manifest.sql  005_stg_customers.sql  006_customer_clean.sql  006_customer_clean_quarantine.sql  006_raw_customers.sql  006_stg_orders.sql  007_customer_orders.sql  007_raw_orders.sql  007_stg_customers.sql  007_stg_orders.sql  008_customer_clean.sql  008_customer_clean_quarantine.sql  008_customer_orders.sql  008_customer_summary.sql  008_stg_customers.sql  009_customer_clean.sql  009_customer_clean_quarantine.sql  009_customer_summary.sql  009_stg_orders.sql  (+8 more)
dbt-dab-wrapper-v0.1/src/forge/: cli.py  compute_resolver.py  graph.py  python_task.py  simple_ddl.py  teardown.py  type_safe.py  workflow.py  workflow_sdk.py
dbt-dab-wrapper-v0.1/src/wrapper/: __init__.py  cli.py  compute_resolver.py  graph.py  simple_ddl.py  type_safe.py  workflow.py
(+133 files in other folders)
